# podio

./: .clang-format  .clang-tidy  .cppcheck-suppressions.txt  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  CMakeLists.txt.save  CMakePresets.json  Jenkinsfile  LICENSE  NOTICE  PODIO_MODULES_FEASIBILITY.md  PODIO_MODULES_PROTOTYPE_SUCCESS.md  PodioConfig.cmake.in  README.md  datalayout.yaml  env.sh  index.html  init.sh  init_macos.sh  podioVersion.h  podioVersion.in.h  pyproject.toml  requirements.txt  setup.cfg
examples/: #unittest.cpp#  CMakeLists.txt  datalayout.yaml  edm_1.yaml  example_zboson.yaml  read.cpp  read.py  simple_realistic.yaml  test.cpp  unittest.cpp  write.cpp
examples/datamodel/: DummyData.h  DummyDataCollection.cc  DummyDataCollection.h  DummyDataHandle.cc  DummyDataHandle.h  EventInfo.cc  EventInfo.h  EventInfoCollection.cc  EventInfoCollection.h  EventInfoConst.h  EventInfoData.h  EventInfoEntry.cc  EventInfoEntry.h  EventInfoHandle.cc  EventInfoHandle.h  EventInfoObj.cc  EventInfoObj.h  ExampleCluster.cc  ExampleCluster.h  ExampleClusterCollection.cc  ExampleClusterCollection.h  ExampleClusterConst.h  ExampleClusterData.h  ExampleClusterEntry.cc  ExampleClusterEntry.h  ExampleClusterObj.cc  ExampleClusterObj.h  ExampleForCyclicDependency1.h  ExampleForCyclicDependency1Collection.h  ExampleForCyclicDependency1Const.h  ExampleForCyclicDependency1Data.h  ExampleForCyclicDependency1Obj.h  ExampleForCyclicDependency2.h  ExampleForCyclicDependency2Collection.h  ExampleForCyclicDependency2Const.h  ExampleForCyclicDependency2Obj.h  ExampleHit.cc  ExampleHit.h  ExampleHitCollection.cc  ExampleHitCollection.h  (+98 more)
examples/python/: eventstore.py  read.py  test_eventstore.py  test_read.py  test_read_2.py
examples/src/: EventInfo.cc  EventInfoCollection.cc  EventInfoConst.cc  ExampleCluster.cc  ExampleClusterCollection.cc  ExampleClusterConst.cc  ExampleForCyclicDependency1.cc  ExampleForCyclicDependency1Collection.cc  ExampleForCyclicDependency1Const.cc  ExampleForCyclicDependency1Obj.cc  ExampleForCyclicDependency2.cc  ExampleForCyclicDependency2Collection.cc  ExampleForCyclicDependency2Const.cc  ExampleForCyclicDependency2Obj.cc  ExampleHit.cc  ExampleHitCollection.cc  ExampleHitConst.cc  ExampleHitObj.cc  ExampleReferencingType.cc  ExampleReferencingTypeCollection.cc  ExampleReferencingTypeConst.cc  ExampleReferencingTypeObj.cc  ExampleWithARelation.cc  ExampleWithARelationCollection.cc  ExampleWithARelationConst.cc  ExampleWithARelationObj.cc  ExampleWithComponent.cc  ExampleWithComponentCollection.cc  ExampleWithComponentConst.cc  ExampleWithNamespace.cc  ExampleWithNamespaceCollection.cc  ExampleWithNamespaceConst.cc  ExampleWithNamespaceObj.cc  ExampleWithOneRelation.cc  ExampleWithOneRelationCollection.cc  ExampleWithOneRelationConst.cc  ExampleWithOneRelationObj.cc  ExampleWithVectorMember.cc  ExampleWithVectorMemberCollection.cc  ExampleWithVectorMemberConst.cc  (+2 more)
examples/utilities/: DummyGenerator.cc  DummyGenerator.h  JetUtils.cc  JetUtils.h  ParticleUtils.cc  ParticleUtils.h  VectorUtils.cc  VectorUtils.h
python/: CMakeLists.txt  EventStore.py  __version__.py.in  albers_class_generator.py  albers_config_reader.py  figure.txt  generator_utils.py  hdf5_class_generator.py  hdf5_class_generator_directories.py  podio_class_generator.py  podio_config_reader.py  podio_create_package.py  podio_create_project.py  podio_jinja2_class_generator.py  podio_schema_evolution.py  podio_templates.py  podio_vis.py  test_ClassDefinitionValidator.py  test_EventStore.py  test_EventStoreRoot.py  test_EventStoreSio.py  test_MemberParser.py
python/podio/: EventStore.py  __init__.py  base_reader.py  base_writer.py  data_source.py  frame.py  frame_iterator.py  generator_utils.py  link_navigator.py  podio_config_reader.py  reading.py  root_io.py  root_merge.py  sio_io.py  test_ClassDefinitionValidator.py  test_CodeGen.py  test_DataModelJSONEncoder.py  test_EventStore.py  test_EventStoreRoot.py  test_EventStoreSio.py  test_Frame.py  test_LinkCollection.py  test_LinkNavigator.py  test_MemberParser.py  test_Pythonizations.py  test_Reader.py  test_ReaderRoot.py  test_ReaderSio.py  test_cppyy.py  utils.py  (+4 more)
src/: ASCIIWriter.cc  ArrowConverterRegistry.cc  ArrowFrameConverter.cc  ArrowTypeRegistry.cc  ArrowUtils.cc  CMakeLists.txt  CollectionBufferFactory.cc  CollectionIDTable.cc  DataSource.cc  DatamodelRegistry.cc  DatamodelRegistryIOHelpers.cc  DictLinkDef.h  EDMDefinitionRegistry.cc  EDMRegistryIOHelpers.cc  EventStore.cc  FilterHookRegistry.cc  GenericParameters.cc  Glob.cc  H5_Writer_Collections.cc  HDF5Writer.cc  IOHelpers.cc  MurmurHash2.cpp  MurmurHash2.h  MurmurHash3.cpp  MurmurHash3.h  PythonEventStore.cc  Pythonizations.cc  RNTupleLazyCategoryState.h  RNTupleLazyFrameData.cc  RNTupleLazyReader.cc  RNTupleReader.cc  RNTupleReaderCommon.cc  RNTupleWriter.cc  ROOTDataSource.cc  ROOTFrameData.cc  ROOTFrameReader.cc  ROOTFrameWriter.cc  ROOTLazyCategoryState.h  ROOTLazyFrameData.cc  ROOTLazyReader.cc  (+39 more)
tests/: 1-datalayout.yaml  2-datalayout.yaml  3-datalayout.yaml  CMakeCache.txt  CMakeLists.txt  CTestCustom.cmake  DatamodelAssociations.cc  DatamodelLinks.cc  H5_EventInfoData.h  H5_ExampleMCData.h  catch.hpp  check_benchmark_outputs.cpp  datalayout.yaml  datalayout_extension.yaml  datalayout_interface_extension.yaml  datalayout_old.yaml  dummy.cpp  dummy_with_bug.cpp  frame.cpp  frame_test_common.h  get_test_inputs.sh  legacy_input_download.cmake  log.txt  lsan_suppressions.txt  ostream_operator.cpp  podio_core_module.ixx  read-legacy-files.cpp  read-multiple.cpp  read-one.cpp  read.cpp  read.py  read_and_write.cpp  read_and_write_associated.cpp  read_and_write_frame.h  read_and_write_sio.cpp  read_dummy.cpp  read_forward_iterators.cpp  read_frame.cpp  read_frame.h  read_frame_auxiliary.h  (+45 more)
tools/: CMakeLists.txt  PodioDumpEvent  PodioEventOverview.cpp  PodioReader.cpp  json-to-yaml  podio-dump  podio-dump-legacy  podio-dump.py  podio-merge-files  podio-ttree-to-rntuple  podio-vis
(+1741 files in other folders)
